# collective.explicitacquisition

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  buildout.cfg  setup.cfg  setup.py  testing.cfg  travis.cfg
.github/workflows/: test.yml
Products/CMFPlone/: configure.zcml  events.py
Products/CMFPlone/interfaces/: __init__.py
Products/CMFPlone/tests/: test_bad_acquisition.py
collective/explicitacquisition/: configure.zcml  events.py  interfaces.py  testing.py
collective/explicitacquisition/tests/: test_bad_acquisition.py
src/collective/explicitacquisition/: events.py
src/collective/explicitacquisition/tests/: test_bad_acquisition.py
