[metadata]
version = 2.1.dev0
name = collective.explicitacquisition
description = Disallow access to acquired content outside the current path.
long_description = file: README.rst, CHANGES.rst
keywords = traversal acquisition
author = Godefroid Chapelle, Johannes Raggam
author_email = raggam-nl@adm.at
url = https://github.com/collective/collective.explicitacquisition
license = GPL
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 5.2
    Framework :: Plone :: 6.0
    Framework :: Plone :: Addon
    Framework :: Zope
    Framework :: Zope :: 4
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    setuptools
    Products.CMFCore

namespace_packages =
    collective
package_dir =
    = src
packages = find:
zip_safe = False

[options.extras_require]
test =
    plone.app.testing
    plone.app.robotframework

[options.packages.find]
where =
    src

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes

[isort]
profile=black
force_alphabetical_sort=True
force_single_line=True
lines_after_imports=2

[zest.releaser]
create-wheel = yes